# auth-api-rs

./: Cargo.toml  README.md  auth_api.postman_collection.json  postman_collection.json
docs/: add-deps.md  init-db.md  install-sqlx.md  prepare.md
migrations/: 20250505071125_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs
src/mail/templates/: Verification-email.html  reset-password-email.html
